--- a/Assignment4.Rmd
+++ b/Assignment4.Rmd
@@ -29,6 +29,7 @@ Step 1: Perform a meta-analysis of pitch variability from previous studies of vo
 
 
 
+
 #load data and packages
 
 pacman::p_load(pacman, tidyverse, brms, psych, metafor, parallel, patchwork)
@@ -106,7 +107,9 @@ metaAnalysis_m0 <- brm(
 priorCheck_metaAnalysis_m0 <-
   pp_check(metaAnalysis_m0, nsamples = 100)
 
-priorCheck_metaAnalysis_m0 + ggtitle(" Prior Check on EffectSize | se (StandardError) ~ 1+ (1|Population)") + theme(plot.title = element_text( size = 10, face = "bold"))
+priorCheck_metaAnalysis_m0 + labs(title = "Prior Check",
+                                  subtitle = "Skeptical Priors",
+                                  caption = "EffectSize | se (StandardError) ~ 1+ (1|Population)")
 
 
 #fitting model
@@ -123,7 +126,9 @@ metaAnalysis_m1 <- brm(
 
 #posterior predictive check
 
-pp_check(metaAnalysis_m1, nsamples = 100) + ggtitle("Posterior Check on EffectSize | se (StandardError) ~ 1+ (1|Population) ")+ theme(plot.title = element_text( size = 10, face = "bold"))
+pp_check(metaAnalysis_m1, nsamples = 100) + labs(title = "Posterior Check",
+                                                 subtitle = "Skeptical Priors",
+                                                 caption = "EffectSize | se (StandardError) ~ 1+ (1|Population)") 
 
 
 
@@ -156,12 +161,12 @@ newData <- newData %>% mutate(PitchVariability = scale(Pitch_IQR))
 hist(newData$PitchVariability)
 
 ASD_DensityPitch <-
-  ggplot(data = filter(newData, Diagnosis == "ASD"), aes(PitchVariability,)) + geom_density() + ggtitle("Distribution of Pitch Variability IQ in ASD") + theme(legend.position = "none") + theme(plot.title = element_text(color = "red", size = 10, face = "bold"))
+  ggplot(data = filter(newData, Diagnosis == "ASD"), aes(PitchVariability, )) + geom_density() + ggtitle("Distribution of Pitch Variability IQ in ASD") + theme(legend.position = "none") + theme(plot.title = element_text(color = "red", size = 10, face = "bold"))
 
 TD_DensityPitch <-
-  ggplot(data = filter(newData, Diagnosis == "TD"), aes(PitchVariability,)) + geom_density() + ggtitle("Distribution of Pitch Variability IQ in TD") + theme(legend.position = "none") + theme(plot.title = element_text(color = "red", size = 10, face = "bold"))
+  ggplot(data = filter(newData, Diagnosis == "TD"), aes(PitchVariability, )) + geom_density() + ggtitle("Distribution of Pitch Variability IQ in TD") + theme(legend.position = "none") + theme(plot.title = element_text(color = "red", size = 10, face = "bold"))
 
-ASD_DensityPitch + TD_DensityPitch 
+ASD_DensityPitch + TD_DensityPitch
 
 
 #lets take a look at the structure of the data
@@ -173,16 +178,15 @@ ASD_DensityPitch + TD_DensityPitch
 ##Verbal IQ may interact with diagnosis and it the data does not look too skewed to cause trouble
 
 ASD_Density_VIQ <-
-  ggplot(data = filter(newData, Diagnosis == "ASD"), aes(VIQ, color = ID)) + geom_density() + ggtitle("Distribution of Verbal IQ in ASD") + theme(legend.position = "none") + theme(plot.title = element_text( size = 10, face = "bold"))
+  ggplot(data = filter(newData, Diagnosis == "ASD"), aes(VIQ, color = ID)) + geom_density() + ggtitle("Distribution of Verbal IQ in ASD") + theme(legend.position = "none") + theme(plot.title = element_text(size = 10, face = "bold"))
 
 
 TD_Density_VIQ <-
-  ggplot(data = filter(newData, Diagnosis == "TD"), aes(VIQ, color = ID)) + geom_density() + ggtitle("Distribution of Verbal IQ in TD") + theme(legend.position = "none") + theme(plot.title = element_text( size = 10, face = "bold"))
+  ggplot(data = filter(newData, Diagnosis == "TD"), aes(VIQ, color = ID)) + geom_density() + ggtitle("Distribution of Verbal IQ in TD") + theme(legend.position = "none") + theme(plot.title = element_text(size = 10, face = "bold"))
 
 
 
 ASD_Density_VIQ + TD_Density_VIQ
-
 
 ```
 
@@ -194,7 +198,6 @@ Step 3: Build a regression model predicting Pitch variability from Diagnosis.
 - Evaluate model quality. Describe and plot the estimates. 
 
 ```{r, MEGA-ANALYSIS pt 2!!!}
-
 
 
 #formulas
@@ -226,7 +229,11 @@ newStudies_m0_pc <- brm(
   file = "NewStudies_m0Prior"
 )
 
-pp_check(newStudies_m0_pc, nsamples = 100) + ggtitle("prior Check on PitchVariability ~ 1 + Diagnosis + (1 | ID)") + theme(plot.title = element_text( size = 10, face = "bold"))
+pp_check(newStudies_m0_pc, nsamples = 100) + labs(title = "Prior Check",
+                                                  subtitle = "Skeptical Priors",
+                                                  caption = "PitchVariability ~ 1 + Diagnosis + (1 | ID)") 
+
+
 
 
 newStudies_m0 <- brm(
@@ -242,6 +249,9 @@ newStudies_m0 <- brm(
 
 plot(newStudies_m0)
 
+pp_check(newStudies_m0, nsamples = 100) + labs(title = "Posterior Check",
+                                               subtitle = "Skeptical Priors",
+                                               caption = "PitchVariability ~ 1 + Diagnosis + (1 | ID)") 
 
 # hypothesis testing
 hypo_m0 <-
@@ -249,7 +259,7 @@ hypo_m0 <-
 
 hypo_m0[[1]] + labs(title = "DiagnosisTD < 0",
                     subtitle = "Skeptical Priors",
-                    caption = "PitchVariability ~ 1 + Diagnosis + (1 | ID)") + theme(strip.text = element_blank()) 
+                    caption = "PitchVariability ~ 1 + Diagnosis + (1 | ID)") + theme(strip.text = element_blank())
 
 hypothesis(newStudies_m0, "DiagnosisTD < 0")
 
@@ -282,8 +292,9 @@ newStudies_m1_pc <- brm(
   
 )
 
-pp_check(newStudies_m1_pc, nsamples = 100) + ggtitle("PriorCheck on PitchVariability~0 + Language + Diagnosis:Language+(1|ID) ") + theme(plot.title = element_text( size = 10, face = "bold"))
-
+pp_check(newStudies_m1_pc, nsamples = 100) + labs(title = "Prior Check",
+                                                  subtitle = "Skeptical Priors",
+                                                  caption = "PitchVariability~0 + Language + Diagnosis:Language+(1|ID) ")
 
 
 newStudies_m1 <- brm(
@@ -298,8 +309,11 @@ newStudies_m1 <- brm(
   
 )
 
+
 # posterior predictive check
-pp_check(newStudies_m1, nsamples = 100) + ggtitle("Posterior Check on PitchVariability~0 + Language + Diagnosis:Language+(1|ID) ") + theme(plot.title = element_text( size = 10, face = "bold"))
+pp_check(newStudies_m1, nsamples = 100) + labs(title = "Posterior Check",
+                                               subtitle = "Skeptical Priors",
+                                               caption = "PitchVariability~0 + Language + Diagnosis:Language+(1|ID)")
 
 
 
@@ -376,9 +390,9 @@ newStudiesInformed_m1_pc <- brm(
   file = "newStudiesInformed_m1_pc"
 )
 
-pp_check(newStudiesInformed_m1_pc, nsamples = 100) + ggtitle(
-  "Prior Check on PitchVariability~0 + Language + Diagnosis:Language+(1|ID) with informed priors"
-) + theme(plot.title = element_text( size = 10, face = "bold"))
+pp_check(newStudiesInformed_m1_pc, nsamples = 100) + labs(title = "Prior Check",
+                                                          subtitle = "Informed Priors",
+                                                          caption = "PitchVariability~0 + Language + Diagnosis:Language+(1|ID) ")
 
 
 newStudiesInformed_m1 <- brm(
@@ -392,25 +406,26 @@ newStudiesInformed_m1 <- brm(
   file = "newStudiesInformed_m"
 )
 
-pp_check(newStudiesInformed_m1_pc, nsamples = 100) + ggtitle(
-  "Posterior Check on PitchVariability~0 + Language + Diagnosis:Language+(1|ID) with informed priors"
-) + theme(plot.title = element_text( size = 10, face = "bold"))
-
+pp_check(newStudiesInformed_m1, nsamples = 100) + labs(title = "Posterior Check",
+       subtitle = "Informed Priors",
+       caption = "PitchVariability~0 + Language + Diagnosis:Language+(1|ID) ") 
 
 # hypothesis testing
-hypoInformed_dk <- plot(hypothesis(newStudiesInformed_m1, "Languagedk:DiagnosisTD < 0"),
-     plot = F)
+hypoInformed_dk <-
+  plot(hypothesis(newStudiesInformed_m1, "Languagedk:DiagnosisTD < 0"),
+       plot = F)
 
 hypoInformed_dk[[1]] + labs(title =  "Languagedk:DiagnosisTD < 0",
-                       subtitle = "Informed Priors",
-                       caption = "PitchVariability~0 + Language + Diagnosis:Language+(1|ID)") + theme(strip.text = element_blank())
+                            subtitle = "Informed Priors",
+                            caption = "PitchVariability~0 + Language + Diagnosis:Language+(1|ID)") + theme(strip.text = element_blank())
 
-hypoInformed_us <- plot(hypothesis(newStudiesInformed_m1, "Languageus:DiagnosisTD < 0"),
-     plot = F)
+hypoInformed_us <-
+  plot(hypothesis(newStudiesInformed_m1, "Languageus:DiagnosisTD < 0"),
+       plot = F)
 
 hypoInformed_us[[1]] + labs(title =  "Languageus:DiagnosisTD < 0",
-                       subtitle = "Informed Priors",
-                       caption = "PitchVariability~0 + Language + Diagnosis:Language+(1|ID)") + theme(strip.text = element_blank())
+                            subtitle = "Informed Priors",
+                            caption = "PitchVariability~0 + Language + Diagnosis:Language+(1|ID)") + theme(strip.text = element_blank())
 
 hypothesis(newStudiesInformed_m1, "Languagedk:DiagnosisTD < 0")
 hypothesis(newStudiesInformed_m1, "Languageus:DiagnosisTD < 0")
@@ -424,8 +439,8 @@ hypoInformed_dk_us <-  plot(
 )
 
 hypoInformed_dk_us[[1]] + labs(title =  "Languagedk:DiagnosisTD < Languageus:DiagnosisTD",
-                       subtitle = "Informed Priors",
-                       caption = "PitchVariability~0 + Language + Diagnosis:Language+(1|ID)") + theme(strip.text = element_blank())
+                               subtitle = "Informed Priors",
+                               caption = "PitchVariability~0 + Language + Diagnosis:Language+(1|ID)") + theme(strip.text = element_blank())
 
 hypothesis(newStudiesInformed_m1,
            "Languagedk:DiagnosisTD < Languageus:DiagnosisTD")
@@ -436,7 +451,6 @@ newStudiesInformed_m1 <-
   add_criterion(newStudiesInformed_m1,
                 criterion = "loo",
                 reloo = T)
-
 
 ```
 
@@ -450,7 +464,7 @@ Step 5: Compare the models
 ```{r}
 loo_model_weights(newStudies_m1, newStudiesInformed_m1)
 
-# plot hypotheses 
+# plot hypotheses
 
 hypo_m1_dk[[1]] + labs(title =  "Languagedk:DiagnosisTD < 0",
                        subtitle = "Skeptical Priors",
@@ -465,14 +479,14 @@ hypo_m1_us[[1]] + labs(title =  "Languageus:DiagnosisTD < 0",
 hypothesis(newStudies_m1, "Languageus:DiagnosisTD < 0")
 
 hypoInformed_dk[[1]] + labs(title =  "Languagedk:DiagnosisTD < 0",
-                       subtitle = "Informed Priors",
-                       caption = "PitchVariability~0 + Language + Diagnosis:Language+(1|ID)") + theme(strip.text = element_blank())
+                            subtitle = "Informed Priors",
+                            caption = "PitchVariability~0 + Language + Diagnosis:Language+(1|ID)") + theme(strip.text = element_blank())
 
 hypothesis(newStudiesInformed_m1, "Languagedk:DiagnosisTD < 0")
 
 hypoInformed_us[[1]] + labs(title =  "Languageus:DiagnosisTD < 0",
-                       subtitle = "Informed Priors",
-                       caption = "PitchVariability~0 + Language + Diagnosis:Language+(1|ID)") + theme(strip.text = element_blank())
+                            subtitle = "Informed Priors",
+                            caption = "PitchVariability~0 + Language + Diagnosis:Language+(1|ID)") + theme(strip.text = element_blank())
 
 hypothesis(newStudiesInformed_m1, "Languageus:DiagnosisTD < 0")
 
